[package]
name = "gaal"
version = "0.1.1"
edition = "2021"
authors = ["Sylvestre Gallon <sylvestre@klub.ki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version="0.19.0", features=["crossterm"]}
crossterm = "0.25.0"
anyhow = "1.0.65"
synnax = "0.1.3"
env_logger = "0.9.1"
